plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.10-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'chillgram project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url = 'https://repo.spring.io/snapshot' }
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:1.1.2"
	}
}

dependencies {
//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//	implementation 'org.springframework.boot:spring-boot-starter-jooq' JDBC 기반
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation "io.projectreactor:reactor-test"
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Security (JWT)
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation("com.nimbusds:nimbus-jose-jwt:10.6")

	// DB: R2DBC
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'org.postgresql:r2dbc-postgresql'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'

	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.38'
	annotationProcessor 'org.projectlombok:lombok:1.18.38'
	testCompileOnly 'org.projectlombok:lombok:1.18.38'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'

	// Spring AI (Google Gemini Native)
	implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'

	// JWT (jjwt)
	implementation "io.jsonwebtoken:jjwt-api:0.12.6"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.6"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.12.6"

	// swagger
	implementation "org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.15"

	// GCP Secret Manager
    // GCP 라이브러리 간의 버전을 알아서 맞춰주는 BOM 추가 (권장)
    implementation platform("com.google.cloud:libraries-bom:26.50.0")
    implementation "com.google.cloud:google-cloud-secretmanager"
    // gRPC 설정 (spring의 netty를 활용)
    implementation "io.grpc:grpc-netty"
    implementation "io.grpc:grpc-stub"
    implementation "io.grpc:grpc-protobuf"

    // Storage & MQ (Added for Manual Test & Compilation)
    implementation 'com.google.cloud:google-cloud-storage'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
	testLogging {
		showStandardStreams = true
		events "passed", "skipped", "failed"
	}
}
